--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.1
 backports.zoneinfo==0.2.1
-boto==2.49.0
+boto3==1.23.9
+botocore==1.26.9
 dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
@@ -9,11 +10,13 @@ django-crispy-forms==1.14.0
 django-formtools==2.3
 django-storages==1.12.3
 gunicorn==20.1.0
+jmespath==1.0.0
 oauthlib==3.2.0
 Pillow==9.1.0
 psycopg2-binary==2.9.3
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
+s3transfer==0.5.2
 sqlparse==0.4.2
 stripe==2.72.0
